--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
     <title>JAD AMER</title>
+    <!-- for featured section on linkedin -->
+    <meta name="description" content="Software Engineer"/>
+    <meta name="title" property="og:title" content="JAD AMER"/>
+    <meta property="og:type" content="Portfolio"/>
+    <meta 
+    name="image"
+    property="og:image"
+    content="https://jad-amer.netlify.app/static/media/jad.700005fa.jpg"
+    />
+    <meta
+    name="description"
+    property="og:description"
+    content="JAD Portfolio"
+    />
+    <meta
+    name="author"
+    content="JAD"
+    />
+    <!-- ////////////////////////// -->
     
   </head>
   <body>
